# mem-layout

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
src/: aligned_alloc.h  layout.h  test_alignment.cpp  test_basic.cpp  test_serialize.cpp
